--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>youssef-neinaa cv</title>
   </head>
@@ -28,9 +31,9 @@
               développeur web - PHP
             </h3>
           </div>
-          <div class=" col-md-2 offset-1">
+          <div class="col-md-2 offset-1">
             <div class="image">
-              <img src="/img/img.png" alt="image" />
+              <img src="img/img.jpg" class="img-thumbnail" alt="image" />
             </div>
           </div>
         </div>
@@ -41,13 +44,16 @@
     <section class="info-perso mt-4">
       <div class="container">
         <!-- heading -->
-        <h3 class="border py-2 px-3 mb-4"><i class="fa fa-tags"></i> Informations Personnelles</h3>
+        <h3 class="border py-2 px-3 mb-4">
+          <i class="fa fa-tags"></i>
+          Informations Personnelles
+        </h3>
         <div class="row pl-3">
           <div class="col-md-4">
             <div class="left">
               <ul class="p-0">
                 <li class="d-flex">
-                  <h5><i class="fa fa-user-o"></i> </h5>
+                  <h5><i class="fa fa-user-o"></i></h5>
                   <p class="ml-3">Youssef Neinaa</p>
                 </li>
                 <li class="d-flex">
@@ -55,7 +61,9 @@
                   <p class="ml-3">26/12/1992</p>
                 </li>
                 <li class="d-flex align-items-center">
-                  <h5><i class="fa fa-mobile" style="font-size:30px"></i></h5>
+                  <h5>
+                    <i class="fa fa-mobile" style="font-size: 30px;"></i>
+                  </h5>
                   <p class="ml-4">0762927783</p>
                 </li>
                 <li class="d-flex">
@@ -91,18 +99,33 @@
     <section class="section-competence mt-4">
       <div class="container">
         <!-- heading -->
-        <h3 class="border py-2 px-3 mb-4"><i class="fa fa-tags"></i> Compétences</h3>
+        <h3 class="border py-2 px-3 mb-4">
+          <i class="fa fa-tags"></i>
+          Compétences
+        </h3>
         <div class="row pl-3">
           <div class="col-md-6">
             <div class="box">
               <div class="box-heading">
-                <h6 class="d-flex align-items-center"><i class="fa fa-thumb-tack fa-2x mr-2"></i> <b>Programmation :</b></h6>
+                <h6 class="d-flex align-items-center">
+                  <i class="fa fa-thumb-tack fa-2x mr-2"></i>
+                  <b>Programmation :</b>
+                </h6>
               </div>
               <div class="box-content mt-2">
                 <ul class="list-unstyled pl-4">
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>Maîtrise de la POO/MVC Design Patterns.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>Connaissance de base en C, C#.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>bonne maîtrise de PHP.</p></li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>Maîtrise de la POO/MVC Design Patterns.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>Connaissance de base en C, C#.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>bonne maîtrise de PHP.</p>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -110,17 +133,41 @@
           <div class="col-md-6">
             <div class="box">
               <div class="box-heading">
-                <h6 class="d-flex align-items-center"><i class="fa fa-thumb-tack fa-2x mr-2"></i> <b> Technologies Web :</b></h6>
+                <h6 class="d-flex align-items-center">
+                  <i class="fa fa-thumb-tack fa-2x mr-2"></i>
+                  <b>Technologies Web :</b>
+                </h6>
               </div>
               <div class="box-content mt-2">
                 <ul>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>PHP & Composer & npm.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>Très bonne maîtrise de Blade /html /css.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>bonne maîtrise du Framework twitter Bootstrap.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>bonne maîtrise du javaScript & ajax/axios.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>bonne maîtrise du Framework vueJs 2.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>bonne maîtrise de bibliothèque jQuery.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p>bonne connaissance du Framework Laravel 6.</p></li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>PHP & Composer & npm.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>Très bonne maîtrise de Blade /html /css.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>bonne maîtrise du Framework twitter Bootstrap.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>bonne maîtrise du javaScript & ajax/axios.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>bonne maîtrise du Framework vueJs 2.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>bonne maîtrise de bibliothèque jQuery.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>bonne connaissance du Framework Laravel 6.</p>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -130,12 +177,21 @@
           <div class="col-md-6">
             <div class="box">
               <div class="box-heading">
-                <h6 class="d-flex align-items-center"><i class="fa fa-thumb-tack fa-2x mr-2"></i> <b> Base de données :</b></h6>
+                <h6 class="d-flex align-items-center">
+                  <i class="fa fa-thumb-tack fa-2x mr-2"></i>
+                  <b>Base de données :</b>
+                </h6>
               </div>
               <div class="box-content mt-2">
                 <ul>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p> MySQL, sqlServer, Oracle.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p> Maîtrise du langage SQL.</p></li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>MySQL, sqlServer, Oracle.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>Maîtrise du langage SQL.</p>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -143,12 +199,21 @@
           <div class="col-md-6">
             <div class="box">
               <div class="box-heading">
-                <h6 class="d-flex align-items-center"><i class="fa fa-thumb-tack fa-2x mr-2"></i> <b> Autres :</b></h6>
+                <h6 class="d-flex align-items-center">
+                  <i class="fa fa-thumb-tack fa-2x mr-2"></i>
+                  <b>Autres :</b>
+                </h6>
               </div>
               <div class="box-content mt-2">
                 <ul>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p> Merise, Uml, Git.</p></li>
-                  <li class="d-flex align-items-center"><i class="fa fa-check mr-2"></i><p> Xampp, Apache.</p></li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>Merise, Uml, Git.</p>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>Xampp, Apache.</p>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -161,7 +226,10 @@
     <section class="section-formation mt-4">
       <div class="container">
         <!-- heading -->
-        <h3 class="border py-2 px-3 mb-4"><i class="fa fa-tags"></i> Formations et Diplômes</h3>
+        <h3 class="border py-2 px-3 mb-4">
+          <i class="fa fa-tags"></i>
+          Formations et Diplômes
+        </h3>
         <div class="row pl-3">
           <div class="col-md-8">
             <div class="box">
@@ -217,7 +285,10 @@
     <section class="section-experiences mt-4">
       <div class="container">
         <!-- heading -->
-        <h3 class="border py-2 px-3 mb-4"><i class="fa fa-tags"></i> Expériences Professionnelles</h3>
+        <h3 class="border py-2 px-3 mb-4">
+          <i class="fa fa-tags"></i>
+          Expériences Professionnelles
+        </h3>
         <!-- exp box -->
         <div class="row pl-3">
           <div class="col-md-8">
@@ -233,27 +304,27 @@
                 <ul>
                   <li>
                     <p>
-                      -------------------------------------------------------------------------------------------------------------
+                      Développer de nouveaux sites Web et API en utilisant PHP Laravel Framework et vueJs.
                     </p>
                   </li>
                   <li>
                     <p>
-                      -------------------------------------------------------------------------------------------------------------
+                      Analyser les exigences, Concevoir et développer des fonctionnalités.
                     </p>
                   </li>
                   <li>
                     <p>
-                      -------------------------------------------------------------------------------------------------------------
+                      créé de nouveaux sites web en utilisant les outils du web standard
                     </p>
                   </li>
                   <li>
                     <p>
-                      -------------------------------------------------------------------------------------------------------------
+                      SEO optimization.
                     </p>
                   </li>
                   <li>
                     <p>
-                      -------------------------------------------------------------------------------------------------------------
+                      Tests et Mise en œuvre
                     </p>
                   </li>
                 </ul>
@@ -292,7 +363,9 @@
                   <li>
                     <p>
                       J'ai fait un stage dans une société spécialisée dans le
-                      domaine de l'informatique <br> - Interconnect Market.
+                      domaine de l'informatique
+                      <br />
+                      - Interconnect Market.
                     </p>
                   </li>
                   <li>
@@ -327,7 +400,9 @@
           <div class="col-md-8">
             <div class="box">
               <div class="box-heading">
-                <h6><b class="text-underline">2019-2021 - Freelancer :</b></h6>
+                <h6>
+                  <b class="text-underline">2019-2021 - Freelancer :</b>
+                </h6>
               </div>
               <div class="box-content mt-2">
                 <ul>
@@ -371,7 +446,10 @@
     <section class="section-experiences mt-4">
       <div class="container">
         <!-- heading -->
-        <h3 class="border py-2 px-3 mb-3"><i class="fa fa-tags"></i> Langues</h3>
+        <h3 class="border py-2 px-3 mb-3">
+          <i class="fa fa-tags"></i>
+          Langues
+        </h3>
 
         <!-- exp box -->
         <div class="row pl-3">
@@ -395,6 +473,13 @@
       </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    <!-- section download cv -->
+    <section class="download">
+      <a href="img/cv.pdf" target="_blank" class="btn btn-danger" id="btn-print">
+        <i class="fa fa-download"></i>
+        Télécharger Cv
+      </a>
+    </section>
+
   </body>
 </html>
