--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <section class="header pt-4 text-capitalize">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-5 offset-3 text-center">
-            <h3 class="heading -block py-2 px-3 border">
+          <div class="col-md-5 offset-md-3 text-md-center">
+            <h3 class="heading -block py-2 px-3 border mb-3 mb-md-0">
               développeur web - PHP
             </h3>
           </div>
-          <div class="col-md-2 offset-1">
+          <div class="col-md-2 offset-md-1">
             <div class="image">
               <img src="img/img.jpg" class="img-thumbnail" alt="image" />
             </div>
