--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
+    <!-- customizer equal normilize but this its created by egyptien karem -->
+    <!-- <link rel="stylesheet" href="https://kareem-m.github.io/customize.css/customize.min.css"> -->
+
     <link rel="stylesheet" href="css/style.css" />
     <title>youssef-neinaa cv</title>
   </head>
@@ -33,7 +37,7 @@
           </div>
           <div class="col-md-2 offset-md-1">
             <div class="image">
-              <img src="img/img.jpg" class="img-thumbnail" alt="image" />
+              <img src="img/img.png" class="img-thumbnail" alt="image" />
             </div>
           </div>
         </div>
@@ -64,7 +68,7 @@
                   <h5>
                     <i class="fa fa-mobile" style="font-size: 30px;"></i>
                   </h5>
-                  <p class="ml-4">0762927783</p>
+                  <p class="ml-4 mt-2">0762927783</p>
                 </li>
                 <li class="d-flex">
                   <h5><i class="fa fa-envelope-o"></i></h5>
@@ -73,8 +77,8 @@
                 <li class="d-flex">
                   <h5><i class="fa fa-globe"></i></h5>
                   <p class="ml-3">
-                    <a href="https://yn-portfolio.netlify.app/" target="_blank">
-                      https://yn-portfolio.netlify.app/
+                    <a href="https://yn-portfolio.netlify.app" target="_blank">
+                      https://yn-portfolio.netlify.app
                     </a>
                   </p>
                 </li>
@@ -112,7 +116,7 @@
                   <b>Programmation :</b>
                 </h6>
               </div>
-              <div class="box-content mt-2">
+              <div class="box-content">
                 <ul class="list-unstyled pl-4">
                   <li class="d-flex align-items-center">
                     <i class="fa fa-check mr-2"></i>
@@ -130,7 +134,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 mb-md-4">
             <div class="box">
               <div class="box-heading">
                 <h6 class="d-flex align-items-center">
@@ -138,7 +142,7 @@
                   <b>Technologies Web :</b>
                 </h6>
               </div>
-              <div class="box-content mt-2">
+              <div class="box-content">
                 <ul>
                   <li class="d-flex align-items-center">
                     <i class="fa fa-check mr-2"></i>
@@ -182,8 +186,8 @@
                   <b>Base de données :</b>
                 </h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
+              <div class="box-content">
+                <ul class="list-unstyled pl-4">
                   <li class="d-flex align-items-center">
                     <i class="fa fa-check mr-2"></i>
                     <p>MySQL, sqlServer, Oracle.</p>
@@ -204,7 +208,7 @@
                   <b>Autres :</b>
                 </h6>
               </div>
-              <div class="box-content mt-2">
+              <div class="box-content">
                 <ul>
                   <li class="d-flex align-items-center">
                     <i class="fa fa-check mr-2"></i>
@@ -236,10 +240,11 @@
               <div class="box-heading">
                 <h6><b>Juin 2018 :</b></h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
-                  <li>
-                    <p>
+              <div class="box-content mt-0">
+                <ul class="pl-4">
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-square mr-2"></i>
+                    <p class="my-0 mt-2">
                       DUT Technicien Spécialisé en Développement Informatique -
                       Ismo Tetouan.
                     </p>
@@ -251,10 +256,11 @@
               <div class="box-heading">
                 <h6><b>2014 - 2015 :</b></h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
-                  <li>
-                    <p>
+              <div class="box-content mt-0">
+                <ul class="pl-4">
+                <li class="d-flex align-items-center my-0">
+                  <i class="fa fa-square mr-2"></i>
+                    <p class="mb-0 mt-2">
                       2 ans de formation a l'université abdelmalek essaadi
                       tetouan - SMPC.
                     </p>
@@ -266,9 +272,10 @@
               <div class="box-heading">
                 <h6><b>Juin 2013 :</b></h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
-                  <li>
+              <div class="box-content">
+                <ul class="pl-4">
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-square mr-2"></i>
                     <p>
                       Baccalauréat Sciences de la Vie et de la Terre - Ouazzane.
                     </p>
@@ -300,31 +307,36 @@
                   </b>
                 </h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
-                  <li>
+              <div class="box-content mt-3">
+                <ul class="pl-4">
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-square mr-2"></i>
                     <p>
                       Développer de nouveaux sites Web et API en utilisant PHP Laravel Framework et vueJs.
                     </p>
                   </li>
-                  <li>
+                   <li class="d-flex align-items-center">
+                    <i class="fa fa-square mr-2"></i>
                     <p>
                       Analyser les exigences, Concevoir et développer des fonctionnalités.
                     </p>
                   </li>
-                  <li>
+                   <li class="d-flex align-items-center">
+                    <i class="fa fa-square mr-2"></i>
                     <p>
-                      créé de nouveaux sites web en utilisant les outils du web standard
+                      créé de nouveaux sites web en utilisant les outils du web standard.
                     </p>
                   </li>
-                  <li>
+                   <li class="d-flex align-items-center">
+                    <i class="fa fa-square mr-2"></i>
                     <p>
                       SEO optimization.
                     </p>
                   </li>
-                  <li>
+                   <li class="d-flex align-items-center">
+                    <i class="fa fa-square mr-2"></i>
                     <p>
-                      Tests et Mise en œuvre
+                      Tests et Mise en œuvre.
                     </p>
                   </li>
                 </ul>
@@ -334,9 +346,10 @@
               <div class="box-heading">
                 <h6><b>Technologies:</b></h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
-                  <li>
+              <div class="box-content">
+                <ul class="pl-4">
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-circle mr-2"></i>
                     <p class="text-capitalize">
                       Html/Css/Bootstrap/Php-Laravel/JavaScript-Vue / jQuery.
                     </p>
@@ -358,9 +371,10 @@
                   </b>
                 </h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
-                  <li>
+              <div class="box-content mt-3">
+                <ul class="pl-4">
+                  <li class="d-flex">
+                    <i class="fa fa-square mr-2 mt-2"></i>
                     <p>
                       J'ai fait un stage dans une société spécialisée dans le
                       domaine de l'informatique
@@ -368,7 +382,8 @@
                       - Interconnect Market.
                     </p>
                   </li>
-                  <li>
+                  <li class="d-flex">
+                    <i class="fa fa-square mr-2 mt-2"></i>
                     <p>
                       en cette période de stage j'ai développé une application
                       web qui calcule les prix de tarifs d'une application de
@@ -382,9 +397,10 @@
               <div class="box-heading">
                 <h6><b>Technologies:</b></h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
-                  <li>
+              <div class="box-content">
+                <ul class="pl-4">
+                  <li class="d-flex">
+                    <i class="fa fa-circle mr-2 mt-2"></i>
                     <p class="text-capitalize">
                       Html/Css/Bootstrap/Php-Laravel/JavaScript-Vue.
                     </p>
@@ -404,16 +420,21 @@
                   <b class="text-underline">2019-2021 - Freelancer :</b>
                 </h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
-                  <li>
+              <div class="box-content mt-3">
+                <ul class="pl-4">
+                  <li class="d-flex">
+                    <i class="fa fa-square mr-2 mt-2"></i>
                     <p>
                       Développer de nouvelles applications et fonctionnalités
                       internes.
                     </p>
                   </li>
-                  <li><p>Réaliser du développement PHP / Mysql.</p></li>
-                  <li>
+                  <li class="d-flex">
+                    <i class="fa fa-square mr-2 mt-2"></i>
+                    <p>Réaliser du développement PHP / Mysql.</p>
+                  </li>
+                  <li class="d-flex">
+                    <i class="fa fa-square mr-2 mt-2"></i>
                     <p>
                       Maintenance et implémentation de nouvelles fonctionnalités
                       ainsi que correction de bugs d'applications développées
@@ -427,9 +448,10 @@
               <div class="box-heading">
                 <h6><b>Technologies:</b></h6>
               </div>
-              <div class="box-content mt-2">
-                <ul>
-                  <li>
+              <div class="box-content">
+                <ul class="pl-4">
+                  <li class="d-flex">
+                    <i class="fa fa-circle mr-2 mt-2"></i>
                     <p class="text-capitalize">
                       Html/Css/JavaScript/Php/MySql/Xampp/Apache.
                     </p>
@@ -455,15 +477,15 @@
         <div class="row pl-3">
           <div class="col-md-8">
             <div class="box">
-              <div class="box-content mt-2">
+              <div class="box-content">
                 <ul class="pl-0">
                   <li class="d-flex">
-                    <h5>Arabe :</h5>
-                    <p class="ml-2">Langue Maternelle</p>
+                    <h6><b>Arabe :</b></h6>
+                    <p class="ml-2 mt-0">Langue Maternelle</p>
                   </li>
                   <li class="d-flex">
-                    <h5>Anglais :</h5>
-                    <p class="ml-2">Intermédiaire</p>
+                    <h6><b>Anglais :</b></h6>
+                    <p class="ml-2 mt-0">Intermédiaire</p>
                   </li>
                 </ul>
               </div>
@@ -475,7 +497,7 @@
 
     <!-- section download cv -->
     <section class="download">
-      <a href="img/cv.pdf" target="_blank" class="btn btn-danger" id="btn-print">
+      <a href="img/cv.pdf" target="_blank" class="btn" id="btn-print">
         <i class="fa fa-download"></i>
         Télécharger Cv
       </a>
