--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row align-items-center">
           <div class="col-md-5 offset-md-3 text-md-center">
             <h3 class="heading -block py-2 px-3 border mb-3 mb-md-0">
-              développeur web - PHP
+              Développeur Web Full-Stack 
             </h3>
           </div>
           <div class="col-md-2 offset-md-1">
