--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <h5><i class="fa fa-envelope-o"></i></h5>
                   <p class="ml-3">yn-neinaa@hotmail.com</p>
                 </li>
-                <li class="d-flex">
+                <li class="d-flex link-portfolio">
                   <h5><i class="fa fa-globe"></i></h5>
                   <p class="ml-3">
                     <a href="https://yn-portfolio.netlify.app" target="_blank">
