--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
                     <i class="fa fa-check mr-2"></i>
                     <p>bonne connaissance du Framework Laravel 6.</p>
                   </li>
+                  <li class="d-flex align-items-center">
+                    <i class="fa fa-check mr-2"></i>
+                    <p>bonne connaissance du CMS wordpress.</p>
+                  </li>
                 </ul>
               </div>
             </div>
