add responsive design

--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
                     </li>
                     <li class="d-flex align-items-center">
                       <i class="fa fa-check mr-2"></i>
+                      <p>Responsive web design avec tous les appareils.</p>
+                    </li>
+                    <li class="d-flex align-items-center">
+                      <i class="fa fa-check mr-2"></i>
                       <p>bonne maîtrise du Framework twitter Bootstrap.</p>
                     </li>
                     <li class="d-flex align-items-center">
