--- a/index.html
+++ b/index.html
@@ -521,6 +521,10 @@
                       <h6><b>Anglais :</b></h6>
                       <p class="ml-2 mt-0">Intermédiaire</p>
                     </li>
+                    <li class="d-flex">
+                      <h6><b>Francais :</b></h6>
+                      <p class="ml-2 mt-0">Intermédiaire</p>
+                    </li>
                   </ul>
                 </div>
               </div>
