add some padding

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <b>Technologies Web :</b>
                   </h6>
                 </div>
-                <div class="box-content">
+                <div class="box-content pl-4">
                   <ul>
                     <li class="d-flex align-items-center">
                       <i class="fa fa-check mr-2"></i>
@@ -226,7 +226,7 @@
                     <b>Autres :</b>
                   </h6>
                 </div>
-                <div class="box-content">
+                <div class="box-content pl-4">
                   <ul>
                     <li class="d-flex align-items-center">
                       <i class="fa fa-check mr-2"></i>
