change feed name

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="box-heading">
                   <h6>
                     <b class="text-underline">
-                      2021 Web Développeur - (Feed Multi Services - Tanger) :
+                      2021 Web Développeur - (Lifeline Media Sarl - Tanger) :
                     </b>
                   </h6>
                 </div>
