remove js particles effects

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
     <!-- scripts -->
     <!-- particles js -->
-    <script src="js/sketch.min.js"></script>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/sketch.min.js"></script>
+    <script src="js/main.js"></script> -->
   </body>
 </html>
